@@ -1,3 +1,5 @@
+20190710 code: add instchown to set ownership and mode on installed files.
+20190709 code: add instpackage to install without root access.
 20190714 code: removed idedit, install-big. var-qmail packages are no more.
 20190708 code: lookup uid/gid at runtime.
 20190711 portability problem: explicitly initialize strerr_sys and
